Implement user registration, email confirmation, and mailing system

--- a/user-service/.env
+++ b/user-service/.env
@@ -21,3 +21,9 @@ MONGO_TLS_ENABLE=false
 GRPC_PORT=4003
 GRPC_TIMEOUT=10h
 
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=aliparwizbaktash19@gmail.com
+
+SMTP_PASSWORD=vhvb ahde pqft blpi
