--- a/user-service/.env
+++ b/user-service/.env
@@ -26,4 +26,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=aliparwizbaktash19@gmail.com
 
-SMTP_PASSWORD=vhvb ahde pqft blpi
+SMTP_PASSWORD=
